compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__unused_case_expression.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 2961
expression: "\npub fn main() {\n    let a = 1\n    case a {\n        1 -> a\n        _ -> 12\n    }\n    Nil\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
    let a = 1
    case a {
        1 -> a
        _ -> 12
    }
    Nil
}


----- WARNING
warning: Unused value
  ┌─ /src/warning/wrn.gleam:4:5
  │  
4 │ ╭     case a {
5 │ │         1 -> a
6 │ │         _ -> 12
7 │ │     }
  │ ╰─────^ This value is never used

This expression computes a value without any side effects, but then the
value isn't used at all. You might want to assign it to a variable, or
delete the expression entirely if it's not needed.
