compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__unused_destructure.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 315
expression: "pub fn a(b) { case b { #(c, _) -> 5 } }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn a(b) { case b { #(c, _) -> 5 } }

----- WARNING
warning: Unused variable
  ┌─ /src/warning/wrn.gleam:1:26
  │
1 │ pub fn a(b) { case b { #(c, _) -> 5 } }
  │                          ^ This variable is never used

Hint: You can ignore it with an underscore: `_c`.
