compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__unused_imported_module_warnings_test.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 325
expression: import gleam/wibble
snapshot_kind: text
---
----- SOURCE CODE
-- gleam/wibble.gleam
pub fn wobble() { 1 }

-- main.gleam
import gleam/wibble

----- WARNING
warning: Unused imported module
  ┌─ /src/warning/wrn.gleam:1:1
  │
1 │ import gleam/wibble
  │ ^^^^^^^^^^^^^^^^^^^ This imported module is never used

Hint: You can safely remove it.
