compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__unused_imported_module_with_alias_and_unqualified_name_no_warnings_test.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 350
expression: "import gleam/one.{two} as three\npub fn wibble() { two() }"
snapshot_kind: text
---
----- SOURCE CODE
-- gleam/one.gleam
pub fn two() { 1 }

-- main.gleam
import gleam/one.{two} as three
pub fn wibble() { two() }

----- WARNING
warning: Unused imported module alias
  ┌─ /src/warning/wrn.gleam:1:24
  │
1 │ import gleam/one.{two} as three
  │                        ^^^^^^^^ This alias is never used

Hint: You can safely remove it.

    import gleam/one as _
