compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__unused_imported_module_with_alias_and_unqualified_name_warnings_test.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 342
expression: "import gleam/one.{two} as three"
snapshot_kind: text
---
----- SOURCE CODE
-- gleam/one.gleam
pub fn two() { 1 }

-- main.gleam
import gleam/one.{two} as three

----- WARNING
warning: Unused imported module
  ┌─ /src/warning/wrn.gleam:1:1
  │
1 │ import gleam/one.{two} as three
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ This imported module is never used

Hint: You can safely remove it.
