compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__unused_int.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 97
expression: "pub fn main() { 1 2 }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() { 1 2 }

----- WARNING
warning: Unused literal
  ┌─ /src/warning/wrn.gleam:1:17
  │
1 │ pub fn main() { 1 2 }
  │                 ^ This value is never used

Hint: You can safely remove it.
