compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__warnings__unused_int_negation_raises_a_warning.snap
---
source: compiler-core/src_refactored/__core/type_/tests/warnings.rs
assertion_line: 1402
expression: "\npub fn main() {\n  -1\n  1\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  -1
  1
}


----- WARNING
warning: Unused literal
  ┌─ /src/warning/wrn.gleam:3:3
  │
3 │   -1
  │   ^^ This value is never used

Hint: You can safely remove it.
